--- a/MLB_Colleges_Basic.html
+++ b/MLB_Colleges_Basic.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8">
 		<title>MLB Colleges</title>
-		<script src="https://d3js.org/d3.v4.min.js"></script>
+		<script src="https://d3js.org/d3.v3.min.js"></script>
 		<script type="text/javascript" src="readinStateFile.js"></script>
 		<style type="text/css">
 
@@ -21,8 +21,8 @@
 <script type="text/javascript">
 
 var diameter = 500, //max size of the bubbles
-    //v3 color    = d3.scale.category20b(); //color category
-	color = d3.scaleOrdinal(d3.schemeCategory10);	// v4
+    color    = d3.scale.category20b();	//v3 color category
+	// color = d3.scaleOrdinal(d3.schemeCategory10);	// v4 color category
 var bubble = d3.layout.pack()
     .sort(null)
     .size([diameter, diameter])
