--- a/MLB_Colleges_Basic.html
+++ b/MLB_Colleges_Basic.html
@@ -3,7 +3,7 @@
     <head>
 		<meta charset="utf-8">
 		<title>MLB Colleges</title>
-		<script src="https://d3js.org/d3.v3.min.js"></script>
+		<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 		<script type="text/javascript" src="readinStateFile.js"></script>
 		<style type="text/css">
 
