--- a/Animated_Donut_Chart.html
+++ b/Animated_Donut_Chart.html
@@ -58,7 +58,7 @@ text {
 <label><input type="radio" name="dataset" id="dataset" value="option2"> Option 2</label>
 </form>
 
-<script src="https://d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
 
