--- a/Horizontal_Bar_Chart.html
+++ b/Horizontal_Bar_Chart.html
@@ -133,7 +133,7 @@
     <label><input type="radio" name="dataset" id="dataset" value="option1"> Option 1</label>
     <label><input type="radio" name="dataset" id="dataset" value="option2"> Option 2</label>
 </form>
-<script type="text/javascript" src="d3/d3.v3.js"></script>
+<script type="text/javascript"  src="https://d3js.org/d3.v3.min.js"></script>
 <script>
 
     datasetTotal = [
