--- a/Animated_Donut_Chart.html
+++ b/Animated_Donut_Chart.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>MLB - Top College Divisions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
+</head>
+
+<body>
+
 <style>
 
 body {
@@ -51,17 +63,77 @@ text {
   font: 12px sans-serif;
 }
 </style>
+
 <body>
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="index.html">Dashboard</a>
+    </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+      <li><a href="Description.html">About the Visualization</a></li>
+      <li><a href="Choropleth_Example.html">Top College States</a></li>
+      <li><a href="Horizontal_Bar_Chart.html">Top 10 Colleges</a></li>
+      <li><a href="Animated_Donut_Chart.html">Top NCAA Divisions</a></li>
+    </ul>
+  </div>
+</nav>
+
 <form>
-<label><input type="radio" name="dataset" id="dataset" value="total" checked> Total</label>
-<label><input type="radio" name="dataset" id="dataset" value="option1"> Option 1</label>
-<label><input type="radio" name="dataset" id="dataset" value="option2"> Option 2</label>
+    <label><input type="radio" name="dataset" id="dataset" value="total" checked>   MLB Players (1871-2016)</label>
+    <label><input type="radio" name="dataset" id="dataset" value="option1">   MLB Players (1960-1999)</label>
+    <label><input type="radio" name="dataset" id="dataset" value="option2">   MLB Players (2000-2016)</label>
 </form>
 
+  
+<div class="container22">
+  <h3>NCAA Divisons where MLB Players played college baseball</h3>
+  <p><sp>Do MLB Players tend to come from large or small colleges? Select a different time period to see the change in demographics.</p>
+</div>
+
+
+</div>
+	</div>
+		<div class="container44">
+			<div class="col-lg-12 text-right" >
+				<a href="index.html">
+				<button type="button" class="btn btn-default btn-small btn-primary">
+					<span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>Home
+				</button></a>
+		</div>
+	</div>
+</div><!-- /.container -->
+
+<!-- This is a comment in HTML -->
+
+
+<!-- MUST BE v3 of D3 libray -->
 <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script>
+/*
+	This visualization was made possible by modifying code provided by:
+	
+	Juan Cruz-Benito, Animated Donut Chart with Labels, Legend and Tooltips
+	Juan Cruz-Benito (juancb)’s Block 1984c7f2b446fffeedde
+	http://bl.ocks.org/juan-cb/1984c7f2b446fffeedde
+	
+*/
 
 
+// This is a comment in JavaScript
+/* And this is a comment in JavaScript */
+
+// Division, player_count for MLB data
+
+// Category 1-6 for sample data in this chart
+// Radio Button Titles for this chart: Total, Option 1, Option 2
+// datasets for chart example: datasetTotal, datasetOption1, datasetOption2
+// field names for chart example:  label, value
+
+
+// select Total as the default for initial display
 d3.select("input[value=\"total\"]").property("checked", true);
 
 var svg = d3.select("body")
@@ -84,7 +156,7 @@ var width = 960,
 var pie = d3.layout.pie()
 	.sort(null)
 	.value(function(d) {
-		return d.value;
+		return d.player_count;
 	});
 
 var arc = d3.svg.arc()
@@ -104,39 +176,40 @@ var div = d3.select("body").append("div").attr("class", "toolTip");
 svg.attr("transform", "translate(" + width / 2 + "," + height / 2 + ")");
 
 var colorRange = d3.scale.category20();
-var color = d3.scale.ordinal()
-	.range(colorRange.range());
+var color = d3.scale.ordinal().range(colorRange.range());
 
-
-datasetTotal = [
-		{label:"Category 1", value:19}, 
-        {label:"Category 2", value:5}, 
-        {label:"Category 3", value:13},
-        {label:"Category 4", value:17},
-        {label:"Category 5", value:19},
-        {label:"Category 6", value:27}
+// MLB Players from 1871-2016
+var datasetTotal_1871_2016 = [
+		{Division:"I", Division_name:"Division I",player_count:4168},
+		{Division:"II", Division_name:"Division II",player_count:330},
+		{Division:"III", Division_name:"Division III",player_count:414},
+		{Division:"CC", Division_name:"Community College",player_count:2633}
         ];
+var total_players_1871_2016 = 4168 + 330 + 414 + 2633;
 
-datasetOption1 = [
-		{label:"Category 1", value:22}, 
-        {label:"Category 2", value:33}, 
-        {label:"Category 3", value:4},
-        {label:"Category 4", value:15},
-        {label:"Category 5", value:36},
-        {label:"Category 6", value:0}
+
+// MLB Players from 1960-1999
+var datasetTotal_1960_1999 = [
+		{Division:"I", Division_name:"Division I",player_count: 2173},
+		{Division:"II", Division_name:"Division II",player_count: 195},
+		{Division:"III", Division_name:"Division III",player_count: 102},
+		{Division:"CC", Division_name:"Community College",player_count: 1943}
         ];
+var total_players_1960_1999 = 2173 + 195 + 102 + 1943;
 
-datasetOption2 = [
-		{label:"Category 1", value:10}, 
-        {label:"Category 2", value:20}, 
-        {label:"Category 3", value:30},
-        {label:"Category 4", value:5},
-        {label:"Category 5", value:12},
-        {label:"Category 6", value:23}
+// MLB Players from 2000-2016
+var datasetTotal_2000_2016 = [
+		{Division:"I", Division_name:"Division I",player_count: 719},
+		{Division:"II", Division_name:"Division II",player_count: 39},
+		{Division:"III", Division_name:"Division III",player_count: 8},
+		{Division:"CC", Division_name:"Community College",player_count: 340}
         ];
+var total_players_2000_2016 = 719 + 39 + 8 + 340;
 
-change(datasetTotal);
+var total_MLB_players = total_players_1871_2016;	// default value
 
+
+change(datasetTotal_1871_2016);
 
 d3.selectAll("input")
 	.on("change", selectDataset);
@@ -146,15 +219,18 @@ function selectDataset()
 	var value = this.value;
 	if (value == "total")
 	{
-		change(datasetTotal);
+		total_MLB_players = total_players_1871_2016;
+		change(datasetTotal_1871_2016);
 	}
 	else if (value == "option1")
 	{
-		change(datasetOption1);
+		total_MLB_players = total_players_1960_1999;
+		change(datasetTotal_1960_1999);
 	}
 	else if (value == "option2")
 	{
-		change(datasetOption2);
+		total_MLB_players = total_players_2000_2016;
+		change(datasetTotal_2000_2016);
 	}
 }
 
@@ -162,11 +238,11 @@ function change(data) {
 
 	/* ------- PIE SLICES -------*/
 	var slice = svg.select(".slices").selectAll("path.slice")
-        .data(pie(data), function(d){ return d.data.label });
+        .data(pie(data), function(d){ return d.data.Division_name });
 
     slice.enter()
         .insert("path")
-        .style("fill", function(d) { return color(d.data.label); })
+        .style("fill", function(d) { return color(d.data.Division_name); })
         .attr("class", "slice");
 
     slice
@@ -184,8 +260,9 @@ function change(data) {
             div.style("left", d3.event.pageX+10+"px");
             div.style("top", d3.event.pageY-25+"px");
             div.style("display", "inline-block");
-            div.html((d.data.label)+"<br>"+(d.data.value)+"%");
-        });
+            var perct = (d.data.player_count / total_MLB_players) * 100;
+			div.html((d.data.Division_name)+"<br>"+(d.data.player_count)+" players"+"<br>"+(d3.round(perct,2))+"%");	// tooltip (hover)
+       });
     slice
         .on("mouseout", function(d){
             div.style("display", "none");
@@ -221,13 +298,15 @@ function change(data) {
     /* ------- TEXT LABELS -------*/
 
     var text = svg.select(".labelName").selectAll("text")
-        .data(pie(data), function(d){ return d.data.label });
+        .data(pie(data), function(d){ return d.data.Division_name });
 
     text.enter()
         .append("text")
         .attr("dy", ".35em")
         .text(function(d) {
-            return (d.data.label+": "+d.value+"%");
+            var per_ct = (d.data.player_count / total_MLB_players) * 100;
+			return (d.data.Division_name+": "+d.player_count+ " players");
+			//return (d.data.Division_name+": "+d.player_count + " players" + per_ct + "%");
         });
 
     function midAngle(d){
@@ -235,7 +314,7 @@ function change(data) {
     }
 
     text
-        .transition().duration(1000)
+        .transition().duration(600)		// 600 ms delay for re-drawing new chart
         .attrTween("transform", function(d) {
             this._current = this._current || d;
             var interpolate = d3.interpolate(this._current, d);
@@ -257,7 +336,8 @@ function change(data) {
             };
         })
         .text(function(d) {
-            return (d.data.label+": "+d.value+"%");
+            //return (d.data.Division_name+": "+d.value+" players "+"<br>"+ " %+");
+            return (d.data.Division_name+": "+d.value+" players ");
         });
 
 
@@ -267,7 +347,7 @@ function change(data) {
     /* ------- SLICE TO TEXT POLYLINES -------*/
 
     var polyline = svg.select(".lines").selectAll("polyline")
-        .data(pie(data), function(d){ return d.data.label });
+        .data(pie(data), function(d){ return d.data.Division_name });
 
     polyline.enter()
         .append("polyline");
@@ -289,5 +369,6 @@ function change(data) {
         .remove();
 };
 
-</script>
-</body>
+		</script>
+	</body>
+</html>
