--- a/index.html
+++ b/index.html
@@ -1,33 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>MLB Dashboard</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
+
+<style type="text/css">
+	/* No style rules here yet */		
+</style>
+
 <body>
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="index.html">Dashboard</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+      <li><a href="Description.html">About the Visualization</a></li>
+      <li><a href="Choropleth_Example.html">Top College States</a></li>
+      <li><a href="Horizontal_Bar_Chart.html">Top 10 Colleges</a></li>
+      <li><a href="Animated_Donut_Chart.html">Top NCAA Divisions</a></li>
     </ul>
   </div>
 </nav>
-  
-<div class="container">
-  <h3>Basic Navbar Example</h3>
-  <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
+
+<div class="container700">
+  <h4>Where MLB Players played college baseball - does it matter?</h4>
+  <p><strong>For each scene, we will look at 3 different time periods of Major League baseball: 1871- 2016 (all time), 1960-1999 (modern era), and 2000-2016 (current players).</strong></p>
+	<p>(Note: a MLB player was selected for each of the resulting datasets if his debut playing year fell into any of the 3 time periods given above).</p>
+	<br><p><strong>The viewer will be able to quickly see the answers to the following questions. He/she will also be able to tell if the answers change based on the period of time he played in.</strong></p>
 </div>
 
-</body>
-</html>
+
+<!-- MAIN MENU on DASHBOARD -->
+
+<div id="mySidenav" class="sidenav">
+		<br><p><strong>Do MLB Players favor playing at colleges located in warm-weather states?</strong><br>
+		<a href="Choropleth_Example.html">Top College States</a></p>
+		<br><p><strong>What are the top 10 colleges that produce MLB players?</strong><br>
+		<a href="Horizontal_Bar_Chart.html">Top 10 Colleges</a></p>
+		<br><p><strong>Do MLB Players tend to come from large or small colleges?</strong><br>
+		<a href="Animated_Donut_Chart.html">Top NCAA Divisions</a><br></p>
+</div>
+
+
+         </div>
+		 </div>
+		 <div class="container77">
+           <div class="col-lg-12 text-right" >
+           <a href="Choropleth_Example.html">
+           <button type="button" class="btn btn-default btn-small btn-primary">
+             <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Next
+           </button></a>
+           </div>
+        </div>
+		</div><!-- /.container -->
+
+
+<div id="mySidenav2" class="sidenav">
+		<br><br><p><strong>This essay provides an in-depth analysis of this narrative visualization.</strong><br>
+		<a href="Description.html">About the Visualization</a></p>
+</div>
+
+<footer class="footer text-left">
+<div class="container1">
+<p class="text-muted"></p>
+<br><strong>Author <a href="https://www.linkedin.com/in/richgjeldum/" target="_blank">Rich Gjeldum</a></strong>
+</div>
+</footer>
