final version - including color legend

--- a/Choropleth_Example.html
+++ b/Choropleth_Example.html
@@ -40,7 +40,10 @@
 
 <div class="container2">
   <h3>U.S. States where MLB Players played college baseball</h3>
-  <p><sp>Do MLB Players favor playing at colleges located in warm-weather states? Select a different time period to see the change in demographics.</p>
+  <p>Do MLB Players favor playing at colleges located in warm-weather states? Select a different time period to see the change in demographics.</p>
+  <p><strong>COLOR LEGEND:</strong> the darker the reddish color, the higher the number of MLB players that played college baseball in that state. Hover over any state to find out how many!</p>
+  <p><strong>Did you notice?</strong> When you change time periods, the colors of the states don't seem to change. But try hovering over a few of the same states for different time periods.</p>
+  <p>The number of MLB players in each state DOES change by time period! That means MLB players have historically played their college baseball in the same warm weather states.</p>
 </div>
 
 
@@ -61,7 +64,10 @@
 /*
 	This visualization was made possible by modifying code provided by:
 	
-	Scott Murray, Choropleth example from "Interactive Data Visualization for the Web" 	https://github.com/alignedleft/d3-book/blob/master/chapter_12/05_choropleth.html	*/
+	Scott Murray, Choropleth example from "Interactive Data Visualization for the Web" 
+	https://github.com/alignedleft/d3-book/blob/master/chapter_12/05_choropleth.html
+	
+*/
 
 			// RJG ORIGINAL Width and height
 			//var w = 500;
