--- a/Horizontal_Bar_Chart.html
+++ b/Horizontal_Bar_Chart.html
@@ -170,7 +170,7 @@
 	</div>
 		<div class="container4">
 			<div class="col-lg-12 text-right" >
-				<a href="Animated_donut_Chart.html">
+				<a href="Animated_Donut_Chart.html">
 				<button type="button" class="btn btn-default btn-small btn-primary">
 					<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>Next
 				</button></a>
