fixed tooltip location

--- a/Choropleth_Example.html
+++ b/Choropleth_Example.html
@@ -357,8 +357,8 @@ function change(data) {
 					//Get this bar's x/y values, then augment for the tooltip
 					//var xPosition = parseFloat(d3.select(this).attr("x")) + xScale.rangeBand() / 2;
 					//var yPosition = parseFloat(d3.select(this).attr("y")) + 14;
-					var xPosition = parseFloat(d3.select(this).attr("x"));
-					var yPosition = parseFloat(d3.select(this).attr("y"));
+					var xPosition = parseFloat(d3.select(this).attr("x")+300);
+					var yPosition = parseFloat(d3.select(this).attr("y")+140);
 					//var xPosition = parseFloat(d3.select(this).attr("x")+(d3.event.pageX)+"px");
 					//var yPosition = parseFloat(d3.select(this).attr("y")+(d3.event.pageY)+"px");
 					//var xPosition = parseFloat(d3.select(this).attr("x")+d3.event.pageX);
