--- a/word_cloud_example.html
+++ b/word_cloud_example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<script type="text/javascript" src="http://d3js.org/d3.v3.min.js"></script>
-<script src="d3.layout.cloud.js"></script>
+<script src="http://d3js.org/d3.v3.js"></script>
+    <script src="d3.layout.cloud.js"></script>
 <head>
     <title>Word Cloud Example</title>
 </head>
