--- a/word_cloud_example.html
+++ b/word_cloud_example.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="d3.layout.cloud.js"></script>
 <head>
     <title>Word Cloud Example</title>
